--- a/Sprint3/src/Componentes/Cabecalho/Style.scss
+++ b/Sprint3/src/Componentes/Cabecalho/Style.scss
@@ -1,5 +1,49 @@
 // src/Componentes/Cabecalho/styles.scss
 
+
+// src/Componentes/Cabecalho/Style.scss
+
+.cabecalho {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2.5cm;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; // Alinha logo e botão
+    padding: 0 1rem;
+    box-sizing: border-box;
+    z-index: 1000;
+  
+    .logo {
+      height: 100%;
+      object-fit: contain;
+    }
+  
+    .sobre-nos-button {
+      padding: 10px 20px; // Adiciona padding ao botão
+      background-color: #ffffff; // Cor de fundo do botão
+      color: #000000; // Cor do texto do botão
+      text-decoration: none; // Remove sublinhado do link
+      border-radius: 5px; // Arredonda os cantos do botão
+      font-family: 'Poppins', sans-serif; // Fonte do botão
+      font-weight: 600; // Peso da fonte
+      font-size: 16px; // Tamanho da fonte
+      display: inline-block;
+      transition: background-color 0.3s; // Adiciona transição suave para hover
+       margin-left: 25cm;
+      &:hover {
+        background-color: #0056b3; // Cor do fundo ao passar o mouse
+      }
+    }
+  }
+  
+
+
+
 .cabecalho {
     position:absolute; // Fixa o cabeçalho no topo da tela
     top: 0; // Alinha o cabeçalho ao topo da tela
@@ -46,3 +90,6 @@
     height: 156px; // Altura da imagem
     
   }
+
+
+  
