Criando pagina Entrar e pegando dados do cadastro e armazenando.

--- a/Sprint3/src/Componentes/FormularioCadastrocliente/style.scss
+++ b/Sprint3/src/Componentes/FormularioCadastrocliente/style.scss
@@ -22,7 +22,11 @@
     
   }
 }
+.link{
 
+color: #007bff;
+
+}
 .formulario {
 background-color: #fff;
   padding: 20px; // Adiciona um pouco de padding
